# avena_system

./: .gitignore  README.md
commons/custom_interfaces/: CMakeLists.txt  README.md  package.xml
commons/custom_interfaces/action/: BTPickAndPlaceAction.action  GeneratePathPickAction.action  GeneratePathPlaceAction.action  GeneratePathPose.action  GraspAction.action  HandEye.action  ItemSelect.action  ManagerPreparePickAndPlaceDataAction.action  PathBuffer.action  PlaceAction.action  SaveBag.action  SceneChangeStatus.action  ScenePublisher.action  Trigger.action  ValidateEstimateShape.action
commons/custom_interfaces/msg/: CamerasData.msg  ChangeDetect.msg  CoppeliaItemInfo.msg  DepthImages.msg  DetectionData.msg  DetectionStatus.msg  Detections.msg  DetectionsList.msg  DetectionsTracking.msg  EndEffectorPose.msg  FilteredSceneOctomap.msg  GeneratedPath.msg  Grasp.msg  GraspData.msg  Heartbeat.msg  Images.msg  Item.msg  ItemElement.msg  ItemSelect.msg  Items.msg  MaskVelocity.msg  MergedPtcldFiltered.msg  MissingItemsIds.msg  ModuleCommand.msg  OccupancyGrid.msg  Octomap.msg  OctomapFilter.msg  Place.msg  PtcldTransformer.msg  Ptclds.msg  RgbDiffResult.msg  RgbImages.msg  RgbdSync.msg  RobotSelfFilter.msg  SceneData.msg  SceneDebugData.msg  SelectedItemsIds.msg  Statistics.msg  Tracker.msg
commons/custom_interfaces/srv/: ControlCommand.srv  DataStoreCamerasDataSelect.srv  DataStoreDetectronInsert.srv  DataStoreDetectronSelect.srv  DataStoreItemCam1Select.srv  DataStoreItemCam2Select.srv  DataStoreItemsInsert.srv  DataStoreItemsSelect.srv  DataStoreMovementSequenceInsert.srv  DataStoreMovementSequenceSelect.srv  DataStoreRgbDataSelect.srv  DataStoreRgbdSyncDelete.srv  DataStoreRgbdSyncInsert.srv  DataStoreRgbdSyncSelect.srv  DataStoreSceneGetList.srv  DataStoreSceneInsert.srv  DataStoreSceneSelect.srv  DataStoreTrackerInsert.srv  DataStoreTrackerSelect.srv  DataStoreTrajectoryInsert.srv  DataStoreTrajectorySelect.srv  GUIPopUp.srv  GetArmState.srv  GetCoppeliaHandle.srv  GetGripperState.srv  GetItemsInfo.srv  GroupItems.srv  List3DModels.srv  ListSpawnedItems.srv  SetArmTorques.srv  SetGripperTorques.srv  SetPickAndPlaceData.srv  SetSimulationStatus.srv  SetTrajectory.srv  SpawnItem.srv  SplitItem.srv  UngroupItem.srv
commons/helpers_commons/: CMakeLists.txt  package.xml
commons/helpers_commons/src/: generic_subscription.cpp  logging.cpp  robot_utils.cpp  subscriptions_manager.cpp  watchdog.cpp
commons/helpers_commons/test/: test_geometry.cpp
coppelia/plugin_control_gripper/: CMakeLists.txt  callbacks.xml  package.xml
coppelia/plugin_control_gripper/include/: commons.hpp  plugin.h
coppelia/plugin_control_gripper/src/: plugin.cpp
coppelia/plugin_generate_path/: CMakeLists.txt  README.md  callbacks.xml  package.xml
coppelia/plugin_generate_path/include/: ompl.h  ompl_test.h  plugin.h
coppelia/plugin_generate_path/src/: plugin.cpp
core/data_store/: CMakeLists.txt  README.md  package.xml
core/data_store/launch/: DataStoreItemsSelect.srv  data_store.launch copy.py  data_store.launch.py
core/data_store/src/: data_store.cpp
core/ik_fast/: CMakeLists.txt
core/parameters_server/: CMakeLists.txt  package.xml
core/parameters_server/launch/: parameters_server.launch.py
core/parameters_server/src/: parameters_server.cpp
drivers/arm_controller/: .gitignore  CMakeLists.txt  package.xml
drivers/arm_controller/config/: base_controller.yaml  base_controller_friction.yaml  diagnostics.yaml  simple_controller.yaml  simple_controller_friction.yaml  single_joint_debug.yaml
drivers/arm_controller/launch/: base_controller.launch.py  diagnostics.launch.py  friction_calib.launch  friction_calib.launch.py  simple_controller.launch  simple_controller.launch.py  single_joint_debug.launch.py
drivers/arm_controller/src/: PID.cpp  base_controller.cpp  diagnostics.cpp  friction_calibration.cpp  hw_interface.cpp  simple_controller.cpp  single_joint_debug.cpp  trajectory_feeder.cpp
drivers/candriver/: CMakeLists.txt  package.xml
drivers/candriver/src/: can_node.cpp  can_operations.cpp  candriver.cpp  lib.c  talker.cpp
logic/logic_bt/: CMakeLists.txt  package.xml
logic/logic_bt/launch/: logic.launch.py
logic/logic_bt/src/: logic_bt.cpp  security_rgb.cpp
logic/logic_bt/xml/: main_tree.xml
logic/security_rgb/: CMakeLists.txt  package.xml
logic/security_rgb/launch/: security_rgb.launch.py
logic/security_rgb/src/: security_rgb.cpp
maintance/camera_extrinsics_calibration/: CMakeLists.txt  package.xml
maintance/camera_extrinsics_calibration/include/: calibrate.hpp  hand_eye.hpp
maintance/camera_extrinsics_calibration/launch/: calibrate.launch.py  publish_extrinsics.launch.py
maintance/camera_extrinsics_calibration/src/: hand_eye.cpp
maintance/probe_calibration/: CMakeLists.txt  package.xml
maintance/probe_calibration/launch/: probe_calibration.launch.py
maintance/probe_calibration/src/: probe_calibration.cpp
movement/dummy_arm_controller/: CMakeLists.txt  package.xml
movement/dummy_arm_controller/launch/: dummy_arm_controller.launch.py
movement/dummy_arm_controller/src/: dummy_arm_controller.cpp
movement/generate_trajectory/: CMakeLists.txt  package.xml
movement/generate_trajectory/include/: generate_trajectory.h  path.h  trajectory.h
movement/generate_trajectory/src/: generate_trajectory.cpp  path.cpp  trajectory.cpp
movement/generate_trajectory_from_waypoints/: CMakeLists.txt  package.xml
movement/generate_trajectory_from_waypoints/launch/: play_generated_trajectories.launch.py  (+3 more)
movement/kinematics/: CMakeLists.txt  package.xml
movement/motion_planning/: CMakeLists.txt  package.xml
movement/path_buffer/: CMakeLists.txt  package.xml
movement/save_trajectory/: CMakeLists.txt  package.xml
movement/spawn_collision_items/: CMakeLists.txt  package.xml
ui/avena_view/: CMakeLists.txt  mainpage.dox  package.xml  plugin.xml  setup.py
ui/data_store_view/: CMakeLists.txt  package.xml  plugin.xml  setup.py
ui/example_logic_client/: CMakeLists.txt  package.xml
ui/robot_diagnostics/: CMakeLists.txt  package.xml  plugin.xml  setup.py
(+688 files in other folders)
