<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>plugin_control_gripper</name>
  <version>0.0.2</version>
  <description>Control gripper in Coppelia Brain</description>
  <maintainer email="karol.frankpwski@pomagier.info">avena</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>custom_interfaces</depend>
  <depend>helpers_commons</depend>
  <depend>helpers_vision</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
