<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>security_rgb</name>
  <version>0.0.0</version>
  <description>Truth table for securtiy rgb</description>
  <maintainer email="hasanfarag@aol.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>helpers_commons</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>