<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dummy_arm_controller</name>
  <version>0.0.1</version>
  <description>Package responsible for simulating arm controller for use with MoveIt</description>
  <maintainer email="bartlomiej.styczen@pomagier.info">Bartlomiej Styczen</maintainer>
  <license>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>control_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
